--- a/Style/style.css
+++ b/Style/style.css
@@ -98,7 +98,7 @@ header{
 #menu_wys{
 	display: none;
 	position: absolute;
-	height: 45vh;
+	height: auto;
 	width: 235px;
 	top: 64px;
 	font-size: 30px;
@@ -223,7 +223,6 @@ left: 0%;
 .m_art article div{
 	display: none;
 	font-family: 'IBM Plex Serif', serif;
-
 	font-size: 15px;
 	z-index: 25;
 	color: white;
@@ -678,15 +677,12 @@ header nav a:hover{
 
 
 .m_art article{
-	height: 220px;
-	display: flex;
-	align-items:center;
+	max-height: 225px;
+	min-height: 120px;
 }
 
 .m_art article div{
 	font-size: 20px;
-
-
 }
 /* Blok z artykułami */
 .main_block{
