--- a/Style/stylek.css
+++ b/Style/stylek.css
@@ -1,6 +1,6 @@
 #contener{
 	display: grid;
-	grid-template-rows: 4em auto 4em;
+	grid-template-rows: 4em minmax(calc(100vh - 8em), auto) 4em;
 }
 
 .m_kontakt{
